--- a/MEVNV/index.html
+++ b/MEVNV/index.html
@@ -4,13 +4,23 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
 </head>
+
+<style>
+  .body {
+    font-family: 'Prompt', sans-serif;
+  }
+</style>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
+
+
 
 </html>
